Connect with h2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.datasource.url=http://localhost:8082/login.do?jsessionid=b3f2fb2e77e6de093bc6edfdda3869c0
+spring.datasource.driver-class-name=org.h2.Driver
